@@ -1,0 +1,23 @@
+# Generated by Django 4.2.7 on 2024-02-02 10:25
+
+from django.db import migrations, models
+
+
+class Migration(migrations.Migration):
+
+    dependencies = [
+        ('services', '0064_frontend_signalsciences_ngwaf_corp_name_and_more'),
+    ]
+
+    operations = [
+        migrations.AddField(
+            model_name='frontend',
+            name='vectra_access_token',
+            field=models.TextField(default='', help_text='Vectra access token', verbose_name='Vectra access token'),
+        ),
+        migrations.AddField(
+            model_name='frontend',
+            name='vectra_expire_at',
+            field=models.DateTimeField(default='', help_text='Vectra access token expire at', verbose_name='Vectra access token expire at'),
+        ),
+    ]
